--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "figbib.doc.tar.xz": 7e6e01e0bfaa01a5568ae37679793f8c568d2586
-  "figbib.tar.xz": efa6b7b60e22f2eb30220f07c3b05de7a6b0f567
+  figbib.doc.tar.xz: 7372d17e89829936c924b9e95fb8f94c26a78ddf
+  figbib.tar.xz: 1e20d7785be81431498fc67f0062aa83c035f7a9
