--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  figbib.doc.tar.xz: 0bc9d450b31a05210167b2757f23c81998528a29
-  figbib.tar.xz: 72f2414406168e92d80435e393318ff24532bb43
+  figbib.doc.r19388.tar.xz: 0bc9d450b31a05210167b2757f23c81998528a29
+  figbib.r19388.tar.xz: 1fcade96e3484a6e5da9fdf4deb2ca7f19ed2bd1
